fixed spacing issue in nav bar logout btn

--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -752,7 +752,8 @@ li {
     display: flex;
     justify-content: flex-end;
 
-    a {
+    a,
+    .login-btn {
       margin-left: 7%;
     }
 
